--- a/code/frontend/packages/client/src/app/_shared/components/ranking-shell/ranking-shell.component.scss
+++ b/code/frontend/packages/client/src/app/_shared/components/ranking-shell/ranking-shell.component.scss
@@ -84,6 +84,16 @@
     background: white;
     border-right: none;
 
+
+    .side-menu {
+      height: 100%;
+
+      >mat-nav-list {
+        flex: 1;
+        overflow-x: auto;
+      }
+    }
+
     .mat-list-item.active {
       background: rgba(0, 0, 0, 0.02);
       border-radius: 5px;
